[gd_scene load_steps=12 format=3 uid="uid://b8dlmwtt6x8bt"]

[ext_resource type="Script" path="res://mob.gd" id="1_1rxhk"]
[ext_resource type="Texture2D" uid="uid://bihw7jrldoqw7" path="res://Dungeon Tiles/frames/pumpkin_dude_idle_anim_f3.png" id="1_dquxf"]
[ext_resource type="Texture2D" uid="uid://cwephlhcx7tvb" path="res://Dungeon Tiles/frames/pumpkin_dude_run_anim_f0.png" id="2_hrq6q"]
[ext_resource type="Texture2D" uid="uid://chgbh22j3xgde" path="res://Dungeon Tiles/frames/pumpkin_dude_run_anim_f1.png" id="3_bypoo"]
[ext_resource type="Texture2D" uid="uid://c1x5sj62xvgvs" path="res://Dungeon Tiles/frames/pumpkin_dude_run_anim_f2.png" id="4_wpxko"]
[ext_resource type="Texture2D" uid="uid://dlo0304i27ixo" path="res://Dungeon Tiles/frames/pumpkin_dude_run_anim_f3.png" id="5_j4hmj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pq16o"]
atlas = ExtResource("2_hrq6q")
region = Rect2(0, 0, 16, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_7g6tl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_dquxf")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pq16o")
}, {
"duration": 1.0,
"texture": ExtResource("3_bypoo")
}, {
"duration": 1.0,
"texture": ExtResource("4_wpxko")
}, {
"duration": 1.0,
"texture": ExtResource("5_j4hmj")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="GDScript" id="GDScript_skthk"]
script/source = "extends AnimatedSprite2D
"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1qtfw"]
radius = 7.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_af7fn"]
size = Vector2(250, 250)

[node name="CharacterBody2D" type="CharacterBody2D"]
scale = Vector2(0.9, 0.9)
script = ExtResource("1_1rxhk")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7g6tl")
animation = &"run"
frame_progress = 0.573606
script = SubResource("GDScript_skthk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_1qtfw")

[node name="Detection Zone" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection Zone"]
shape = SubResource("RectangleShape2D_af7fn")

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 0.75

[connection signal="body_entered" from="Detection Zone" to="." method="_on_detection_zone_body_entered"]
[connection signal="body_exited" from="Detection Zone" to="." method="_on_detection_zone_body_exited"]
[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
